--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=JavaScript
+*.js linguist-language=TypeScript
 *.css linguist-language=TypeScript
-*.html linguist-language=html
+*.html linguist-language=TypeScript
